Added menu state handler

--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -44,7 +44,14 @@
                 </div>
             </div>
             <div class="currentPosition">
-                <p><i class="fa fa-angle-right" aria-hidden="true" style="color:orange; font-size:18px;"></i><span> About</span>
+                <p><i class="currentPositionAngleRiht fa fa-angle-right" aria-hidden="true"></i>
+                    <span id="s1">About</span>
+                    <span id="s2">Professional experience</span>
+                    <span id="s3">Education</span>
+                    <span id="s4">Computer skills</span>
+                    <span id="s5">Interests and hobbies</span>
+                    <span id="s6">Personal Projects</span>
+                    <span id="s7">I'm recommend</span>
                 </p>
             </div>
 
@@ -165,11 +172,11 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nobis assumenda eligendi repellendus sunt aliquam quo, doloribus vel, in corporis non veniam, ipsum qui deserunt.</p>
                         <h4>Certificates <i class="fa fa-certificate" aria-hidden="true"></i></h4>
                         <!-- End -->
+                        <div class="downArrow" id="Computer"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
                     </article>
 
                     <article>
-                        <div class="downArrow" id="Computer"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
                         <div class="redLine">
                             <div class="mSquareL">
                                 <h3 id="Computer">Computer_skills</h3>
@@ -211,7 +218,7 @@
                         </div>
                     </article>
 
-                    <article>
+                    <article class="sss">
                         <div class="redLine">
                             <div class="mSquareL">
                                 <h3>I'm_recommend</h3>
