menu and p padding fixed

--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -135,7 +135,7 @@
                                 <img src="img/info.png" alt="info">
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nobis ut placeat tenetur explicabo atque consectetur accusantium hic officiis vel eum veniam reiciendis nemo repellendus fugiat amet in dolores exercitationem nostrum deserunt, cupiditate ad? Quos debitis error voluptatibus optio, ad eveniet velit sint quasi consectetur culpa, sed totam accusamus illum corporis quae ut.</p>
+                        <p>I' try to make some hybrid between my CV and portfolio, and if you read this you can estimate what I got. Now I'm studying and trying to get a ticket to IT sphere. In this place, I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I find important.</p>
                         <div class="downArrow" id="Professional"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
                     </article>
@@ -149,7 +149,8 @@
                                 <img src="img/quarter.png" alt="quarter">
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veniam quibusdam fugit dicta nobis nostrum tempora minima enim quam, corporis sint. Earum iste, praesentium fuga dicta quae itaque voluptatem quam, rem adipisci, aspernatur illo molestiae doloribus veniam.</p>
+                        <p> 2016 – Text United GmbH Intern: Development of Add-in VSTO for Microsoft Office Excel Implementation of Shopify API Implementation of HubSpot API
+                        2013–2014 – Varenichnaya Katyusha LLC Chief marketing manager Marketing manager 2012–2013 – TK-Domashniy tekstyl LLC Storekeeper 2010–2011 – Tverdytsya LLC Sales manager</p>
 
                         <div class="downArrow" id="Education"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
@@ -165,7 +166,8 @@
                                 <img src="img/graduate-cap.png" alt="graduate-cap">
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat odio nostrum error necessitatibus, doloremque perferendis eligendi quas perspiciatis consectetur, dolores possimus iusto quidem impedit fuga rerum cum, velit aperiam repellendus ad. Rerum iure aperiam tempora veniam asperiores, a cumque amet.</p>
+                        <p>2014–2017 Wyższa Szkoła Gospodarki w Bydgoszczy Specialization – programming and web technologies
+2010–2012 Inter-Regional Academy of Personnel Management Specialization – commercial and labor law Bachelor 2006–2010 Inter-Regional Academy of Personnel Management Economic Legal Technical – School Specialization – law Junior specialist</p>
                         <h4>University <i class="fa fa-university" aria-hidden="true"></i></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nulla, consequuntur hic minus cumque similique provident natus sit, excepturi recusandae, commodi maxime ipsam tenetur cupiditate.</p>
                         <h4>Self <i class="fa fa-user" aria-hidden="true"></i></h4>
@@ -185,7 +187,7 @@
                                 <img src="img/laptop-icon.png" alt="laptop-icon">
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam recusandae vel debitis voluptas quis fugit necessitatibus consectetur laudantium nulla adipisci cum, ducimus corporis nemo dolorem ut placeat eaque unde temporibus, corrupti ad consequatur quod? Tenetur, molestias, aperiam, velit necessitatibus ut, quasi voluptate cum vero animi tempora assumenda. Voluptatum, vitae, architecto!</p>
+                        <p>Programming: C#, JavaScript, T-SQL (basic query), HTLM, CSS, Bootstrap Basic knowledge of following .NET components: WCF, WinForms, WPF, ADO.NET, Entity Framework, LINQ Work with next software: Microsoft - Visual Studio, SSMS 2014, Office Adobe - Photoshop, Illustrator, Brackets Siemens - Solid Edge And other Platforms: Windows XP/7/10, Linux</p>
                         <div class="downArrow" id="Interests"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
                     </article>
@@ -199,7 +201,7 @@
                                 <img src="img/rocket-black-shape.png" alt="rocket-black-shape">
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi accusamus cum pariatur ea! Aliquam nemo eum explicabo, eaque pariatur maiores nam odio sit a ipsam quasi libero adipisci nostrum!</p>
+                        <p>Self-education, programming, web and graphic design, drawing, robotics, Arduino based projects, photography</p>
                         <div class="downArrow" id="Personal"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
                     </article>
