--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -79,7 +79,7 @@
 
                         <div class="contactInf">
                             <h2> My mobile phone:</h2>
-                            <p><span class="iconSize"><i class="fa fa-mobile" aria-hidden="true"></i></span>+48 883 089 252</p>
+                            <p><span class="iconSize"><i class="fa fa-phone" aria-hidden="true"></i> </span>+48 883 089 252</p>
                         </div>
 
                         <div class="contactInf">
@@ -135,12 +135,14 @@
                                 <img src="img/info.png" alt="info">
                             </div>
                         </div>
-                        <p>I' try to make some hybrid between my CV and portfolio, and if you read this you can estimate what I got. Now I'm studying and trying to get a ticket to IT sphere. In this place, I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I find important.</p>
-                        <div class="downArrow" id="Professional"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
-                    </article>
+                        <p>In this page, I'm trying to make some hybrid between my CV and portfolio, and if you read this please estimate it and give me a feedback. Now I'm studying and trying to get a ticket to IT sphere. In this place, I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I find important.</p>
+                        <p><span>So, let's start our acquaintance!</span>
+                        </p>
 
-                    <article>
+                    </article>
+                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
+                    <article id="Professional">
                         <div class="redLine">
                             <div class="mSquareL">
                                 <h3>Professional_experience</h3>
@@ -149,12 +151,27 @@
                                 <img src="img/quarter.png" alt="quarter">
                             </div>
                         </div>
-                        <p> 2016 – Text United GmbH Intern: Development of Add-in VSTO for Microsoft Office Excel Implementation of Shopify API Implementation of HubSpot API
-                        2013–2014 – Varenichnaya Katyusha LLC Chief marketing manager Marketing manager 2012–2013 – TK-Domashniy tekstyl LLC Storekeeper 2010–2011 – Tverdytsya LLC Sales manager</p>
-
-                        <div class="downArrow" id="Education"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
+                        <p>
+                            <ul>
+                                <li>2016 – Text United GmbH Intern:</li>
+                                <ul>
+                                    <li>Development of Add-in VSTO for Microsoft Office Excel</li>
+                                    <li>Implementation of Shopify API</li>
+                                    <li>Implementation of HubSpot API</li>
+                                </ul>
+                            </ul>
+                            <hr>
+                            <p>My first acquaintance with the IT world was in 2014 (while I was working as a sales manager and partly took part in the administrating of the website). And finally, I decided to choose career of programming after executing the projects together with specialists from the IT company.</p>
+                            <hr>
+                            <ul>
+                                <li>2013–2014 – Varenichnaya Katyusha LLC Chief marketing manager Marketing manager</li>
+                                <li>2012–2013 – TK-Domashniy tekstyl LLC Storekeeper</li>
+                                <li>2010–2011 – Tverdytsya LLC Sales manager</li>
+                            </ul>
+                        </p>
                     </article>
+                    <div class="downArrow" id="Education"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
 
                     <article>
                         <!-- Education section -->
@@ -166,17 +183,45 @@
                                 <img src="img/graduate-cap.png" alt="graduate-cap">
                             </div>
                         </div>
-                        <p>2014–2017 Wyższa Szkoła Gospodarki w Bydgoszczy Specialization – programming and web technologies
-2010–2012 Inter-Regional Academy of Personnel Management Specialization – commercial and labor law Bachelor 2006–2010 Inter-Regional Academy of Personnel Management Economic Legal Technical – School Specialization – law Junior specialist</p>
-                        <h4>University <i class="fa fa-university" aria-hidden="true"></i></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nulla, consequuntur hic minus cumque similique provident natus sit, excepturi recusandae, commodi maxime ipsam tenetur cupiditate.</p>
-                        <h4>Self <i class="fa fa-user" aria-hidden="true"></i></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nobis assumenda eligendi repellendus sunt aliquam quo, doloribus vel, in corporis non veniam, ipsum qui deserunt.</p>
-                        <h4>Certificates <i class="fa fa-certificate" aria-hidden="true"></i></h4>
-                        <!-- End -->
-                        <div class="downArrow" id="Computer"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
+                        <h4>University<i class="fa fa-university" aria-hidden="true"></i></h4>
+                        <ul>
+                            <li>2014–2017 Wyższa Szkoła Gospodarki w Bydgoszczy Specialization – programming and web technologies</li>
+
+                            <li>2010–2012 Inter-Regional Academy of Personnel Management Specialization – commercial and labor law.
+                                <br>– Bachelor</li>
+
+
+                            <li>2006–2010 Inter-Regional Academy of Personnel Management Economic Legal Technical – School Specialization – law.
+                                <br>– Junior specialist</li>
+
+                            <h4>Self <i class="fa fa-user" aria-hidden="true"></i></h4>
+                            <p>Self-education its most interesting topic for me. I spend much time training my skills and searching new information and resources.</p>
+                            <h4>Certificates<i class="fa fa-certificate" aria-hidden="true"></i></h4>
+
+                            <div class="resp">
+                                <div class="img">
+                                    <a href="img/download.png">
+                                        <img src="img/download.png" alt="certificate">
+                                    </a>
+                                    <div class="desc">I hope in the nearest future I will be able to fill this gap. </div>
+                                </div>
+                            </div>
+
+                            <div class="resp">
+                                <div class="img">
+                                    <a href="img/download.png">
+                                        <img src="img/download.png" alt="certificate">
+                                    </a>
+                                    <div class="desc">It the near future something should be here! </div>
+                                </div>
+                            </div>
+
+                            <div class="clearfix"></div>
+
+                            <!-- End -->
                     </article>
+                    <div class="downArrow" id="Computer"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
 
                     <article>
                         <div class="redLine">
@@ -187,10 +232,12 @@
                                 <img src="img/laptop-icon.png" alt="laptop-icon">
                             </div>
                         </div>
-                        <p>Programming: C#, JavaScript, T-SQL (basic query), HTLM, CSS, Bootstrap Basic knowledge of following .NET components: WCF, WinForms, WPF, ADO.NET, Entity Framework, LINQ Work with next software: Microsoft - Visual Studio, SSMS 2014, Office Adobe - Photoshop, Illustrator, Brackets Siemens - Solid Edge And other Platforms: Windows XP/7/10, Linux</p>
-                        <div class="downArrow" id="Interests"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
+                        <p>
+                            Programming: C#, JavaScript, T-SQL (basic query), HTLM, CSS, Bootstrap Basic knowledge of following .NET components: WCF, WinForms, WPF, ADO.NET, Entity Framework, LINQ Work with next software: Microsoft - Visual Studio, SSMS 2014, Office Adobe - Photoshop, Illustrator, Brackets Siemens - Solid Edge And other Platforms: Windows XP/7/10, Linux
+                        </p>
                     </article>
+                    <div class="downArrow" id="Interests"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
 
                     <article>
                         <div class="redLine">
@@ -202,9 +249,9 @@
                             </div>
                         </div>
                         <p>Self-education, programming, web and graphic design, drawing, robotics, Arduino based projects, photography</p>
-                        <div class="downArrow" id="Personal"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
                     </article>
+                    <div class="downArrow" id="Personal"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
 
                     <article>
                         <div class="redLine">
@@ -216,9 +263,9 @@
                             </div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus laudantium est ipsam eligendi esse! Necessitatibus repellendus, nihil ab voluptates aut nesciunt voluptas perferendis totam quia consequuntur iste porro velit molestiae, consectetur enim aperiam, officiis corporis a odio adipisci quae? Quia vitae, earum. Ad possimus est sunt nihil dicta iure rerum quidem! Sunt quo eveniet nesciunt fugit et velit a eos!</p>
-                        <div class="downArrow" id="Recommend"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
                     </article>
+                    <div class="downArrow" id="Recommend"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
 
                     <article class="sss">
                         <div class="redLine">
@@ -230,9 +277,10 @@
                             </div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, cum suscipit debitis omnis! Necessitatibus deserunt, tempore velit. Quas rem, modi id neque quasi illum cum quae veniam officia accusamus similique veritatis voluptate quidem nisi! In adipisci corporis doloremque blanditiis expedita tempora ex illum maxime voluptate itaque nulla, sint maiores neque, cum nihil quidem, ipsum quo. Voluptate in voluptatem adipisci cum et error ipsum, deleniti sed inventore perferendis, consequuntur enim ad fugit, vel quidem atque aliquam ullam autem!</p>
-                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        </div>
+
                     </article>
+                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </div>
                 </section>
             </div>
         </div>
