--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -37,8 +37,8 @@
                 <div class="dropdown-content">
                     <a class="scroll" id="Ab" href="#About">About</a>
                     <a class="scroll" id="Prof" href="#Professional">Professional experience</a>
-                    <a class="scroll" id="Edu" href="#Education">Education</a>
                     <a class="scroll" id="Com" href="#Computer">Computer skills</a>
+                    <a class="scroll" id="Edu" href="#Education">Education</a>
                     <a class="scroll" id="Int" href="#Interests">Interests and hobbies</a>
                     <a class="scroll" id="Per" href="#Personal">Personal projects</a>
                     <a class="scroll" id="Rec" href="#Recommend">I'm recommend</a>
@@ -48,8 +48,8 @@
                 <p><i class="currentPositionAngleRiht fa fa-angle-right" aria-hidden="true"></i>
                     <span id="s1">About</span>
                     <span id="s2">Professional exp</span>
-                    <span id="s3">Education</span>
-                    <span id="s4">Computer skills</span>
+                    <span id="s3">Computer skills</span>
+                    <span id="s4">Education</span>
                     <span id="s5">Interests and hobbies</span>
                     <span id="s6">Personal projects</span>
                     <span id="s7">I'm recommend</span>
@@ -60,7 +60,7 @@
     </nav>
     <!-- End -->
 
-    <div class="container">
+    <div id="About" class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="topLine"></div>
@@ -133,7 +133,7 @@
                                 <img src="img/info.png" alt="info">
                             </div>
                         </div>
-                        <h3 id="About">About</h3>
+                        <h3>About</h3>
                         <div class="toggle-wrap">
                             <p>In this page, I'm trying to make some hybrid between my CV and portfolio, and if you read this please estimate it and give me a feedback. Now I'm studying and trying to get a ticket to IT sphere. In this place, I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I find important.</p>
                             <p><span>So, let's start our acquaintance!</span>
@@ -154,10 +154,11 @@
                         <div class="b2">
                             <h3>Professional experience</h3>
                             <ul>
-                                <li><em>2016</em> – <a>Text United GmbH</a>
+                                <li><em>2016</em> – <a>Text United GmbH.</a>
                                 </li>
                                 <li><em>Position:</em> Intern.</li>
-                                <li><em>Project:</em></li>
+                                <li><em>Project:</em>
+                                </li>
                                 <li>
                                     <ul>
                                         <li>Development of Add-in VSTO for Microsoft Office Excel;</li>
@@ -170,9 +171,9 @@
                             <p>My first meet with the IT world was in 2010 (while I was working as a sales manager and partly took part in the administrating of the website). And finally, I decided to choose career of programming in 2014 after executing the projects together with specialists from the IT company.</p>
                             <hr>
                             <ul>
-                                <li><em>2013–2014</em> – <a>Varenichnaya Katyusha LLC</a>
+                                <li><em>2013–2014</em> – <a>Varenichnaya Katyusha LLC.</a>
                                 </li>
-                                <li><em>Position:</em> Chief marketing manager, marketing manager</li>
+                                <li><em>Position:</em> Chief marketing manager, marketing manager.</li>
                             </ul>
                             <hr>
                             <ul>
@@ -187,7 +188,54 @@
                             <p></p>
                         </div>
                     </article>
-                    <div class="downArrow" id="Education"><i id="a2" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow"><i id="a2" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </div>
+
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/laptop-icon.png" alt="laptop-icon">
+                            </div>
+                        </div>
+                        <div class="b4">
+                            <h3 id="Computer">Computer skills</h3>
+                            <ul>
+                                <li><em>Programming:</em> C#, JavaScript, jQuery, T-SQL, HTLM, CSS, Bootstrap;</li>
+                                <li><em>Next steps:</em> AJAX, AngularJS, Node.js;</li>
+                                <li><em>Familiar with following .NET components:</em> ASP.NET MVC, WCF, WinForms, WPF, ADO.NET, Entity Framework;</li>
+                            </ul>
+                            <hr>
+                            <div class="imgWall text-center">
+                                <img src="img/Unofficial_JavaScript_logo_2.svg" alt="JavaScript logo">
+                                <img src="img/JQuery_logo.svg" alt="JQuery logo">
+                                <img src="img/angular-icon.svg" alt="Angular logo">
+                                <img src="img/HTML5_logo_and_wordmark.svg" alt="HTML5 logo">
+                                <img src="img/CSS3_logo_and_wordmark.svg" alt="CSS3 logo">
+                                <img src="img/Boostrap_logo.svg" alt="Boostrap logo">
+                                <img src="img/Node.js_logo_2015.svg" alt="Node.js logo">
+                                <img src="img/Microsoft_logo_(2012).svg" alt="Microsoft logo">
+                                <img src="img/Microsoft_SQL_Server_Logo.svg" alt="Microsoft SQL Server Logo">
+                            </div>
+                            <hr>
+                            <ul class="skills">
+                                <li>Platforms: Windows XP/7/10, Linux;</li>
+                                <li><em>Work with next software:</em>
+                                </li>
+                                <li>
+                                    <ul>
+                                        <li><em>Microsoft</em> - Visual Studio, SSMS 2014, Office;</li>
+                                        <li><em>Adobe</em> - Photoshop, Illustrator, Brackets;</li>
+                                        <li><em>Siemens</em> - Solid Edge;</li>
+                                        <li><em>And other...</em>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
+                    <div class="downArrow" id="Education"><i id="a4" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
                     <!-- Education section -->
@@ -202,42 +250,46 @@
                         <div class="b3">
                             <h3>Education</h3>
                             <h4>University<i class="fa fa-university" aria-hidden="true"></i></h4>
+
                             <ul>
                                 <li><em>2014–2017</em> – <a>Wyższa Szkoła Gospodarki</a> w Bydgoszczy.</li>
-                                <li>
-                                    <p><em>Specialization</em> – programming and web technologies.</p>
-                                </li>
+                                <li><em>Specialization</em> – programming and web technologies.</li>
                             </ul>
+
                             <ul>
-                                <li><em>2014</em> – Training center <a>“Success”</a>.
-                                    <li>
-                                        <li>
-                                            <p><em>Specialization</em> - web development</p>
-                                        </li>
+                                <li><em>2014</em> – Training center <a>“Success”</a>.</li>
+                                <li><em>Specialization</em> - web development.</li>
                             </ul>
+
                             <hr>
+
                             <p class="learn"><em>"You're never too old to learn!"</em>
                             </p>
+
                             <hr>
+
                             <ul>
                                 <li><em>2010–2012</em> - Inter-Regional Academy of Personnel Management.</li>
                                 <li>
-                                    <p><em>Specialization</em> - commercial and labor law.</p>
+                                    <em>Specialization</em> - commercial and labor law.
                                 </li>
                                 <li>
-                                    <p><em>Degree</em> – Bachelor.</p>
+                                    <em>Degree</em> – Bachelor.
                                 </li>
                             </ul>
+
                             <p></p>
+
                             <ul>
-                                <li><em>2006–2010</em> - Inter-Regional Academy of Personnel Management Economic Legal Technical–School</li>
+                                <li><em>2006–2010</em> - Inter-Regional Academy of Personnel Management Economic Legal Technical–School.</li>
                                 <li>
-                                    <p><em>Specialization</em> – law.</p>
+                                    <em>Specialization</em> – law.
                                 </li>
                                 <li>
-                                    <p><em>Degree</em> – Junior specialist</p>
+                                    <em>Degree</em> – Junior specialist.
                                 </li>
                             </ul>
+
                             <h4>Self <i class="fa fa-user" aria-hidden="true"></i></h4>
                             <p>Self-education its most important topic for me. I spend much time training my skills and searching new information and resources. I even thinking that it's some kind of hobbies for me...</p>
                             <h4>Certificates<i class="fa fa-certificate" aria-hidden="true"></i></h4>
@@ -261,49 +313,7 @@
                         </div>
                         <!-- End -->
                     </article>
-                    <div class="downArrow"><i id="a3" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
-                    </div>
-
-                    <article>
-                        <div class="redLine">
-                            <div class="mSquareL">
-                            </div>
-                            <div class="mSquareR">
-                                <img src="img/laptop-icon.png" alt="laptop-icon">
-                            </div>
-                        </div>
-                        <div class="b4">
-                            <h3 id="Computer">Computer skills</h3>
-                            <ul>
-                                <li><em>Programming:</em> C#, JavaScript, jQuery, T-SQL, HTLM, CSS, Bootstrap;</li>
-                                <li><em>Next steps:</em> AJAX, AngularJS, Node.js;</li>
-                                <li><em>Familiar with following .NET components:</em> ASP.NET MVC, WCF, WinForms, WPF, ADO.NET, Entity Framework;</li>
-                                <div class="imgWall text-center">
-                                    <img src="img/Unofficial_JavaScript_logo_2.svg">
-                                    <img src="img/JQuery_logo.svg">
-                                    <img src="img/angular-icon.svg">
-                                    <img src="img/HTML5_logo_and_wordmark.svg">
-                                    <img src="img/CSS3_logo_and_wordmark.svg">
-                                    <img src="img/Boostrap_logo.svg">
-                                    <img src="img/Node.js_logo_2015.svg">
-                                    <img src="img/Microsoft_logo_(2012).svg">
-                                    <img src="img/Microsoft_SQL_Server_Logo.svg">
-                                </div>
-                                
-                                <hr>
-                                <li><em>Work with next software:</em></li>
-                                <li>
-                                    <ul>
-                                        <li><em>Microsoft</em> - Visual Studio, SSMS 2014, Office;</li>
-                                        <li><em>Adobe</em> - Photoshop, Illustrator, Brackets;</li>
-                                        <li><em>Siemens</em> - Solid Edge And other Platforms: Windows XP/7/10, Linux;</li>
-                                        <li><em>And other...</em></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </article>
-                    <div class="downArrow" id="Interests"><i id="a4" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="Interests"><i id="a3" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
                     <article>
@@ -350,14 +360,14 @@
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project 1</h5>
+                                        <h5>Project One</h5>
                                         <figure>
                                             <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
                                             <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus deleniti repudiandae vitae distinctio deserunt doloremque, velit eligendi odit aspernatur. Totam doloremque neque illo excepturi dolorum?</figcaption>
                                         </figure>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project 2</h5>
+                                        <h5>Project Two</h5>
                                         <figure>
                                             <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
                                             <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere magnam veritatis quos sunt perspiciatis recusandae mollitia odio repellendus sequi nam.</figcaption>
@@ -366,14 +376,14 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project 3</h5>
+                                        <h5>Project Three</h5>
                                         <figure>
                                             <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
                                             <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, adipisci, excepturi autem voluptates, saepe non sunt quidem facilis quisquam quod suscipit! Totam est, nisi necessitatibus!</figcaption>
                                         </figure>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project 4</h5>
+                                        <h5>Project Four</h5>
                                         <figure>
                                             <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
                                             <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis eveniet exercitationem, magni! Molestias sequi provident ducimus corporis fugit, incidunt praesentium velit, est nisi doloremque reprehenderit.</figcaption>
