--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <!-- My CSS -->
     <link href="css/mycss.css" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
