--- a/01_Project_WeBuildBrand/WeBuildBrand.html
+++ b/01_Project_WeBuildBrand/WeBuildBrand.html
@@ -28,14 +28,16 @@
 </head>
 
 <body>
-    
-    
+
+
 
     <!-- Navbar -->
     <nav class="navbar navbar-default navbar">
         <div id="HOME" class="container-fluid">
             <div class="navbar-header">
-                <a href="#HOME" title="Home page"><img src="img/Brand.png" alt="brand logo"></a>
+                <a href="#HOME" title="Home page">
+                    <img src="img/Brand.png" alt="brand logo">
+                </a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -44,10 +46,14 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#HOME" class="scroll">HOME</a></li>
-                    <li><a href="#PORTFOLIO" class="scroll">PORTFOLIO</a></li>
-                    <li><a href="#ABOUT" class="scroll">ABOUT</a></li>
-                    <li><a href="#CONTACT" class="scroll">CONTACT</a></li>
+                    <li><a href="#HOME" class="scroll">HOME</a>
+                    </li>
+                    <li><a href="#PORTFOLIO" class="scroll">PORTFOLIO</a>
+                    </li>
+                    <li><a href="#ABOUT" class="scroll">ABOUT</a>
+                    </li>
+                    <li><a href="#CONTACT" class="scroll">CONTACT</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -95,29 +101,45 @@
         <div class="circlemenu">
             <div class="row text-center center-block">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c1" class="img-responsive" src="img/Col%201.png" alt="c1"></a>
+                    <a href="#">
+                        <img id="c1" class="img-responsive" src="img/Col%201.png" alt="c1">
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c2" class="img-responsive" src="img/Col%202.png" alt="c2"></a>
+                    <a href="#">
+                        <img id="c2" class="img-responsive" src="img/Col%202.png" alt="c2">
+                    </a>
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c3" class="img-responsive" src="img/Col%203.png" alt="c3"></a>
+                    <a href="#">
+                        <img id="c3" class="img-responsive" src="img/Col%203.png" alt="c3">
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-6  col-md-4 col-lg-3">
-                    <a href="#"><img id="c4" class="img-responsive" src="img/Col%204.png" alt="c4"></a>
+                    <a href="#">
+                        <img id="c4" class="img-responsive" src="img/Col%204.png" alt="c4">
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c5" class="img-responsive" src="img/Col%205.png" alt="c5"></a>
+                    <a href="#">
+                        <img id="c5" class="img-responsive" src="img/Col%205.png" alt="c5">
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c6" class="img-responsive" src="img/Col%206.png" alt="c6"></a>
+                    <a href="#">
+                        <img id="c6" class="img-responsive" src="img/Col%206.png" alt="c6">
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c7" class="img-responsive" src="img/Col%207.png" alt="c7"></a>
+                    <a href="#">
+                        <img id="c7" class="img-responsive" src="img/Col%207.png" alt="c7">
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="#"><img id="c8" class="img-responsive" src="img/Col%208.png" alt="c8"></a>
+                    <a href="#">
+                        <img id="c8" class="img-responsive" src="img/Col%208.png" alt="c8">
+                    </a>
                 </div>
             </div>
         </div>
@@ -132,8 +154,8 @@
             <div class="col-sm-4 ">
                 <div class="thumbnail">
                     <img src="img/ava-1.jpg" alt="JD" width="220" height="228">
-                    <p class="box"><span>Melannie Doe</span><br>
-                        Project Manager</p>
+                    <p class="box"><span>Melannie Doe</span>
+                        <br>Project Manager</p>
                     <div class="textbox">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure beatae, corrupti ex ullam possimus laborum asperiores.</p>
                     </div>
@@ -143,7 +165,7 @@
                 <div class="thumbnail">
                     <img src="img/ava-2.jpg" alt="JD" width="220" height="228">
                     <p class="box"><span>Jhonnie Doe</span>
-                        <br> Graphic Designer</p>
+                        <br>Graphic Designer</p>
                     <div class="textbox">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure beatae, corrupti ex ullam possimus laborum asperiores.</p>
                     </div>
@@ -153,7 +175,7 @@
                 <div class="thumbnail">
                     <img src="img/ava-3.jpg" alt="JD" width="220" height="228">
                     <p class="box"><span>Daniel Doe</span>
-                        <br> Wep Designer</p>
+                        <br>Wep Designer</p>
                     <div class="textbox">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure beatae, corrupti ex ullam possimus laborum asperiores.</p>
                     </div>
@@ -205,7 +227,9 @@
                 <p>&#169; Copyright 2013 Bak-One | One Page Flat Template</p>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right">
-                <a href="#HOME" class="scroll"><img src="img/Col%202.jpg" alt="arrowup"></a>
+                <a href="#HOME" class="scroll">
+                    <img src="img/Col%202.jpg" alt="arrowup">
+                </a>
             </div>
         </div>
     </div>
