--- a/02_Project_InsightArt/InsightArt.html
+++ b/02_Project_InsightArt/InsightArt.html
@@ -5,9 +5,8 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <link type="text/css" href="css/MyCss.css" rel="stylesheet"/>
+    <link type="text/css" href="css/MyCss.css" rel="stylesheet" />
     <title>Документ без названия</title>
 </head>
 
@@ -16,7 +15,9 @@
         <!-- header -->
         <div class="header">
             <div class="logo">
-                <a href="#"><img src="img/logo.png" /></a>
+                <a href="#">
+                    <img src="img/logo.png" alt="logo" />
+                </a>
             </div>
             <div class="language">
             </div>
@@ -29,33 +30,49 @@
         <!-- main_cont -->
         <div class="main_cont">
             <div class="slider_block">
-                <div id="" class="EDGE-182604785"></div>
+                <div class="EDGE-182604785"></div>
             </div>
             <div class="line2"></div>
             <div class="menu_cart_block">
                 <div class="menu_item1">
-                    <a href="#"><img class="imgopas" src="img/draft.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/draft.png" alt="draft" />
+                    </a>
                 </div>
                 <div class="menu_item2">
-                    <a href="#"><img class="imgopas" src="img/foto.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/foto.png" alt="foto" />
+                    </a>
                 </div>
                 <div class="menu_item3">
-                    <a href="#"><img class="imgopas" src="img/wind.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/wind.png" alt="wind" />
+                    </a>
                 </div>
                 <div class="menu_item4">
-                    <a href="#"><img class="imgopas" src="img/bag.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/bag.png" alt="bag" />
+                    </a>
                 </div>
                 <div class="menu_item5">
-                    <a href="#"><img class="imgopas" src="img/speaker.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/speaker.png" alt="speaker" />
+                    </a>
                 </div>
                 <div class="menu_item6">
-                    <a href="#"><img class="imgopas" src="img/ruler_pencil.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/ruler_pencil.png" alt="ruler_pencil" />
+                    </a>
                 </div>
                 <div class="menu_item7">
-                    <a href="#"><img class="imgopas" src="img/lightbulb.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/lightbulb.png" alt="lightbulb" />
+                    </a>
                 </div>
                 <div class="menu_item8">
-                    <a href="#"><img class="imgopas" src="img/mail.png" /></a>
+                    <a href="#">
+                        <img class="imgopas" src="img/mail.png" alt="mail" />
+                    </a>
                 </div>
                 <div id="Stage" class="EDGE-126614748"></div>
             </div>
@@ -66,15 +83,20 @@
             <div class="footer_fon">
                 <ul>
                     <li>
-                        <a href="#"><img src="img/social_networks_vk.png" /></a>
+                        <a href="#">
+                            <img src="img/social_networks_vk.png" alt="Social networks vk" />
+                        </a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/social_networks_fb.png" /></a>
+                        <a href="#">
+                            <img src="img/social_networks_fb.png" alt="Social networks fb" />
+                        </a>
                     </li>
                 </ul>
             </div>
             <!-- footer_fon end -->
         </div>
+    </div>
 </body>
 
 </html>
